[gd_scene load_steps=9 format=3 uid="uid://b383ofsmpqt55"]

[ext_resource type="Script" uid="uid://bv26fkvrv8bar" path="res://scenes/characters/slime_enemy.gd" id="1_spd34"]
[ext_resource type="Texture2D" uid="uid://duc0bvo61ljvv" path="res://assets/sprites/slime.svg" id="2_d2gw2"]
[ext_resource type="PackedScene" uid="uid://22o5hm5rorw8" path="res://scenes/components/hitbox_component.tscn" id="3_cak1k"]
[ext_resource type="PackedScene" uid="uid://gxc4hcrljhcm" path="res://scenes/components/health_component.tscn" id="4_oqv1l"]
[ext_resource type="AnimationLibrary" uid="uid://bo5gtqkkhod47" path="res://scenes/characters/slime_enemy_anims.tres" id="5_2rcg4"]
[ext_resource type="PackedScene" uid="uid://dfbi8k6eqssuk" path="res://scenes/components/modular_hit_particles.tscn" id="6_d2gw2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgdpr"]
size = Vector2(44, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pnp1"]
size = Vector2(56, 56)

[node name="SlimeEnemy" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(363, 235)
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967292
script = ExtResource("1_spd34")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.06, 0.057)
texture = ExtResource("2_d2gw2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mgdpr")

[node name="EnemyHitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_cak1k")]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 3
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitboxComponent"]
shape = SubResource("RectangleShape2D_8pnp1")

[node name="HealthComponent" parent="." instance=ExtResource("4_oqv1l")]
max_health = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": ExtResource("5_2rcg4")
}
autoplay = "follow-x"
speed_scale = 2.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ModularHitParticles2D" parent="." instance=ExtResource("6_d2gw2")]

[connection signal="area_exited" from="EnemyHitboxComponent" to="." method="_on_enemy_hitbox_component_area_exited"]
[connection signal="taking_damage" from="HealthComponent" to="." method="_on_health_component_taking_damage"]
